<resources>
    <string name="app_name">Proportional Recipes</string>

    <!--Menu Strings-->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_upload">Upload Recipes</string>
    <string name="action_download">Download Recipes</string>




    <!--RecipeActivity-->
    <string name="edit_text_quantity">Quantity</string>
    <string name="text_view_ingredient_name">Name</string>
    <string name="text_view_ingredient_count">Count</string>
    <string name="text_view_ingredient_unit">Unit</string>
    <string name="text_view_ingredient_proportion">Prop. Count</string>
    <string name="button_ok">OK</string>

    <!--Empty View-->
    <string name="text_view_empty_text">No Data</string>

    <!--EditRecipe Activity-->
    <string name="text_view_recipe_edit_title">Title</string>
    <string name="hint_recipe_edit_title_hint">Enter Title</string>
    <string name="text_view_recipe_edit_ingredients_title">Ingredients</string>
    <string name="button_recipe_edit_add_ingredient">Add Ingredient</string>
    <string name="button_recipe_edit_save">Save</string>
    <string name="button_recipe_edit_up_arrow">↑</string>

    <!--Ingredient Dialog-->
    <string name="hint_dialog_ingredient_quantity">Qty.</string>
    <string name="hint_dialog_ingredient_name">Ingredient Name</string>
    <string name="button_dialog_add">Add</string>
    <string name="button_dialog_cancel">Cancel</string>
    <string name="button_dialog_remove">Remove</string>

    <!--Snackbar Strings-->
    <string name="upload_success">Upload successful!</string>
    <string name="upload_failure">Upload unsuccessful :(</string>
    <string name="download_success">Download Success!</string>
    <string name="download_failure">Download Unsuccessful :(</string>

    <!--AlertDialog-->
    <string name="dialog_confirm">Are you sure?</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>


    <string-array name="dialog_spinner_units">
        <item>Units</item>
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>mL</item>
        <item>L</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>cup</item>
        <item>piece</item>
        <item>box</item>
        <item>stick</item>
        <item>(to taste)</item>
    </string-array>
</resources>
